Minnor changes: (debug false, requirements, docker deployment...)

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ behave = "*"
 splinter = "*"
 requests = "*"
 django-heroku = "*"
+freeze = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.6"
